<resources>
    <string name="app_name">FloatButtonApp</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="delete_all">Delete All</string>
    <string name="get_all">Get All</string>
    <string name="text_view">TextView</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="search">search</string>
    <string name="collections">collections</string>
    <string name="shopping">shopping</string>
    <string name="favorite">favorite</string>
</resources>
