<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorite"/>
    <item
        android:id="@+id/addItem"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_create"

       />
    <item
        android:id="@+id/collections"
        android:title="@string/collections"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_collections"/>
    <item
        android:id="@+id/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        />


</menu>